<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Rename APPs</string>
    <string name="search_hint">Search applications</string>
    <string name="status_unconfigured">Unconfigured</string>
    <string name="dialog_title">Rename Application</string>
    <string name="original_name">Original Name: %1$s</string>
    <string name="package_name">Package: %1$s</string>
    <string name="custom_name_hint">Enter new display name</string>
    <string name="action_save">Save</string>
    <string name="action_reset">Restore Default</string>
    <string name="action_cancel">Cancel</string>
    <string name="toast_saved">Saved for %1$s. Reboot launcher to apply.</string>
    <string name="toast_cleared">Restored default for %1$s.</string>
    <string name="loading_apps">Loading installed applications…</string>
    <string name="no_apps_found">No matching applications found</string>
    <string name="app_count_summary">%1$d configured / %2$d total apps</string>
    <string name="module_not_activated">Module is not activated in LSPosed!</string>
    <string name="module_activated">Module is activated in LSPosed</string>
    <string name="module_activation_hint">Module is not activated in LSPosed, please enable and check scopes.</string>
    <string name="current_system_launcher">System Launcher</string>
    <string name="current_system_launcher_format">Current System Launcher: %1$s</string>
    <string name="info_miui_cache">Note: System Launchers (e.g. MIUI) heavily cache app icons and names. You may need to clear the launcher\'s cache, switch system themes, or reboot your phone for changes to take effect on the home screen.</string>
    <string name="menu_more">More</string>
    <string name="menu_restart_launcher">Restart Launcher</string>
    <string name="toast_restart_launcher_success">Attempting to stop launcher process</string>
    <string name="toast_restart_launcher_fail">Root access is required to restart launcher</string>
    <string name="menu_settings">Settings</string>
    <string name="header_configured">Configured APPs</string>
    <string name="header_unconfigured">Unconfigured APPs</string>
</resources>
